--- a/service/pom.xml
+++ b/service/pom.xml
@@ -303,6 +303,13 @@
       <artifactId>apacheds-server-integ</artifactId>
       <version>${apache-directory-server.version}</version>
       <scope>test</scope>
+        <!-- 编译时 报错 无法解析下载依赖ldap-client-api 把依赖去掉 -->
+        <exclusions>
+            <exclusion>
+                <groupId>org.apache.directory.client.ldap</groupId>
+                <artifactId>ldap-client-api</artifactId>
+            </exclusion>
+        </exclusions>
     </dependency>
 
     <dependency>
